--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         const firebaseConfig = {
             apiKey: "AIzaSyA_gNkLMsTxneTwyg5bDxKBN9osRIUrPaE",
             authDomain: "the-colony-tap.firebaseapp.com",
-            databaseURL: "https://console.firebase.google.com/u/0/project/the-colony-tap/database/the-colony-tap-default-rtdb/data/~2F",
+            databaseURL: "https://the-colony-tap-default-rtdb.firebaseio.com",
             projectId: "the-colony-tap",
             storageBucket: "the-colony-tap.firebasestorage.app",
             messagingSenderId: "433438733616",
