--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://i.imgur.com/W6H3wKX.jpg') center/cover;
+            background: url('https://avatars.mds.yandex.net/i?id=53958dc9748c433f1cab928d3aca10c5_l-6475641-images-thumbs&n=13') center/cover;
             opacity: 0;
             transition: opacity 0.3s;
             mask-image: radial-gradient(circle, black, transparent);
@@ -1292,4 +1292,5 @@
         })();
     </script>
 </body>
+
 </html>
