--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://i.imgur.com/W6H3wKX.jpg') center/cover;
+            background: url('https://img.freepik.com/premium-psd/earth-science-isolated-transparent-background_191095-26435.jpg?semt=ais_hybrid') center/cover;
             opacity: 0;
             transition: opacity 0.3s;
             mask-image: radial-gradient(circle, black, transparent);
@@ -1328,4 +1328,5 @@
         })();
     </script>
 </body>
+
 </html>
