--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://img.freepik.com/premium-psd/earth-science-isolated-transparent-background_191095-26435.jpg?semt=ais_hybrid') center/cover;
+            background: url('https://github.com/HooLi2022/The-Colony-Tap/commit/4d09fa3259b59be832c2c383c47b4811f71075b2') center/cover;
             opacity: 0;
             transition: opacity 0.3s;
             mask-image: radial-gradient(circle, black, transparent);
@@ -1330,3 +1330,4 @@
 </body>
 
 </html>
+
