--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('ССЫЛКА_НА_ТВОЮ_КАРТИНКУ') center/cover;
+            background: url('https://github.com/HooLi2022/The-Colony-Tap/commit/4d09fa3259b59be832c2c383c47b4811f71075b2') center/cover;
             z-index: 2;
             clip-path: inset(100% 0 0 0);
             transition: clip-path 0.3s ease-out;
@@ -1321,4 +1321,5 @@
         })();
     </script>
 </body>
+
 </html>
