--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://i.imgur.com/W6H3wKX.jpg') center/cover;
+            background: url('https://github.com/HooLi2022/The-Colony-Tap/blob/main/в.png?raw=true') center/cover;
             /* Временно для отладки - раскомментируй чтобы проверить */
             /* background: url('https://images.unsplash.com/photo-1614730321146-b6fa6a46bcb4?w=400') center/cover; */
             z-index: 2;
@@ -1368,4 +1368,5 @@
         })();
     </script>
 </body>
+
 </html>
