--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             inset: 0;
             background: url('https://github.com/HooLi2022/The-Colony-Tap/blob/main/в.png') center/cover;
             /* Временно для отладки - раскомментируй чтобы проверить */
-            /* background: url('https://images.unsplash.com/photo-1614730321146-b6fa6a46bcb4?w=400') center/cover; */
+             background: url('https://images.unsplash.com/photo-1614730321146-b6fa6a46bcb4?w=400') center/cover; */
             z-index: 2;
             clip-path: inset(100% 0 0 0);
             transition: clip-path 0.3s ease-out;
@@ -1370,5 +1370,6 @@
 </body>
 
 </html>
+
 
 
