--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://github.com/HooLi2022/The-Colony-Tap/blob/main/в.png') center/cover;
+            background: url('https://avatars.mds.yandex.net/i?id=94649166b488b59250cdf66927fa17ad_l-7718735-images-thumbs&n=13') center/cover;
             z-index: 2;
             clip-path: inset(100% 0 0 0);
             transition: clip-path 0.3s ease-out;
@@ -1368,6 +1368,7 @@
 </body>
 
 </html>
+
 
 
 
