--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://i.imgur.com/W6H3wKX.jpg') center/cover;
+            background: url('https://github.com/HooLi2022/The-Colony-Tap/blob/main/в.png') center/cover;
             background-size: cover;
             z-index: 2;
             clip-path: inset(100% 0 0 0);
@@ -1466,4 +1466,5 @@
         })();
     </script>
 </body>
+
 </html>
