--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://i.imgur.com/W6H3wKX.jpg') center/cover;
+            background: url('https://yt3.googleusercontent.com/jxNzA1STZW8BLqnCWh0-0_N2HIp9YW3gBzH7enj7wk5bGjp9U3wbvCkvAOPT8ZUBFFtHlnui2Q=s900-c-k-c0x00ffffff-no-rj') center/cover;
             background-size: cover;
             z-index: 2;
             clip-path: inset(100% 0 0 0);
@@ -1492,4 +1492,5 @@
         })();
     </script>
 </body>
+
 </html>
