--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
         }
         
         body {
+            <!-- Yandex.RTB R-A-18791854-1 -->
+<div id="yandex_rtb_R-A-18791854-1"></div>
+<script>
+window.yaContextCb.push(() => {
+    Ya.Context.AdvManager.render({
+        "blockId": "R-A-18791854-1",
+        "renderTo": "yandex_rtb_R-A-18791854-1"
+    })
+})
+</script>
             min-height: 100vh;
             background: linear-gradient(135deg, #0B0B2B, #1B1B4B);
             font-family: 'Segoe UI', system-ui, sans-serif;
@@ -1497,4 +1507,5 @@
 </body>
 
 </html>
+
 
