--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <!-- Yandex.RTB -->
-<script>window.yaContextCb=window.yaContextCb||[]</script>
-<script src="https://yandex.ru/ads/system/context.js" async></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌍 Заселение Земли</title>
@@ -15,16 +12,26 @@
         }
         
         body {
-            <!-- Yandex.RTB R-A-18791854-1 -->
-<div id="yandex_rtb_R-A-18791854-1"></div>
+            <!--AdFox START-->
+<!--yandex_oleg228231124-->
+<!--Площадка: Заселение Земли / * / *-->
+<!--Тип баннера: 100%x100% Turbo-->
+<!--Расположение: верх страницы-->
+<div id="adfox_177184316797386820"></div>
 <script>
-window.yaContextCb.push(() => {
-    Ya.Context.AdvManager.render({
-        "blockId": "R-A-18791854-1",
-        "renderTo": "yandex_rtb_R-A-18791854-1"
+    window.yaContextCb.push(()=>{
+        Ya.adfoxCode.create({
+            ownerId: 691132,
+            containerId: 'adfox_177184316797386820',
+            params: {
+                pp: 'g',
+                ps: 'mdxg',
+                p2: 'hukd'
+            }
+        })
     })
-})
 </script>
+
             min-height: 100vh;
             background: linear-gradient(135deg, #0B0B2B, #1B1B4B);
             font-family: 'Segoe UI', system-ui, sans-serif;
@@ -1507,5 +1514,6 @@ window.yaContextCb.push(() => {
 </body>
 
 </html>
+
 
 
