--- a/agreement.html
+++ b/agreement.html
@@ -1,1 +1,217 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Пользовательское соглашение - Заселение Земли</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: linear-gradient(135deg, #0B0B2B, #1B1B4B);
+            color: #ddd;
+            margin: 0;
+            padding: 20px;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+        }
+        .container {
+            max-width: 800px;
+            background: rgba(255,255,255,0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 24px;
+            padding: 30px;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+        }
+        h1 {
+            color: #ffd700;
+            font-size: 2rem;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        h2 {
+            color: #ffd700;
+            font-size: 1.3rem;
+            margin: 25px 0 15px;
+        }
+        p, li {
+            line-height: 1.6;
+            margin-bottom: 10px;
+        }
+        ul, ol {
+            padding-left: 20px;
+            margin-bottom: 20px;
+        }
+        li {
+            margin-bottom: 5px;
+        }
+        .important {
+            background: rgba(255,215,0,0.1);
+            border-left: 4px solid #ffd700;
+            padding: 15px;
+            margin: 20px 0;
+            border-radius: 0 10px 10px 0;
+        }
+        .footer {
+            margin-top: 30px;
+            text-align: center;
+            color: #aaa;
+            font-size: 0.9rem;
+        }
+        a {
+            color: #ffd700;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>🌍 Пользовательское соглашение</h1>
+        <p style="text-align: center; color: #aaa;">Игры "Заселение Земли"</p>
+        
+        <div class="important">
+            <p><strong>Важно:</strong> Перед началом использования игры внимательно ознакомьтесь с условиями настоящего Соглашения. Если вы не согласны с каким-либо пунктом, вы обязаны немедленно прекратить использование сайта.</p>
+        </div>
 
+        <h2>1. Общие положения</h2>
+        <p>1.1. Настоящее Пользовательское соглашение (далее — Соглашение) регулирует отношения между владельцем сайта "Заселение Земли" (далее — «Администрация») и любым лицом, использующим сайт (далее — «Пользователь»).</p>
+        <p>1.2. Администрация: <strong>Каварнукаев Олег Вячеславович</strong>, ИНН <strong>471702602370</strong> (самозанятый).</p>
+        <p>1.3. Сайт: игра-кликер, доступная по адресу (укажи свой URL), а также все связанные с ним поддомены и сервисы.</p>
+        <p>1.4. Использование сайта означает безоговорочное принятие Пользователем всех условий Соглашения.</p>
+        <p>1.5. Администрация имеет право в любое время изменять условия Соглашения без уведомления Пользователя. Новая редакция вступает в силу с момента ее опубликования.</p>
+
+        <h2>2. Предмет соглашения</h2>
+        <p>2.1. Предметом настоящего Соглашения является предоставление Пользователю доступа к игровому процессу и возможность приобретения внутриигровой валюты (далее — «Клики»).</p>
+        <p>2.2. Клики являются цифровым товаром и представляют собой:</p>
+        <ul>
+            <li>Возможность увеличивать личный счет Пользователя в игре;</li>
+            <li>Возможность влиять на глобальный прогресс заполнения Земли;</li>
+            <li>Участие в рейтинге игроков (Топ).</li>
+        </ul>
+        <p>2.3. Курс обмена: <strong>1 клик = 1 российский рубль (RUB)</strong>.</p>
+        <p>2.4. Доступные для покупки пакеты:</p>
+        <ul>
+            <li>10 кликов — 10 рублей</li>
+            <li>50 кликов — 50 рублей</li>
+            <li>100 кликов — 100 рублей</li>
+            <li>1000 кликов — 1000 рублей</li>
+        </ul>
+
+        <h2>3. Порядок оказания услуг</h2>
+        <p>3.1. Для совершения покупки Пользователь обязан:</p>
+        <ul>
+            <li>Ввести игровой ник (имя) на сайте;</li>
+            <li>Выбрать желаемый пакет кликов;</li>
+            <li>Произвести оплату через доступные платежные системы.</li>
+        </ul>
+        <p>3.2. <strong>Автоматическое зачисление:</strong> Клики зачисляются на счет Пользователя автоматически в течение нескольких секунд после подтверждения оплаты.</p>
+        <p>3.3. Зачисление происходит одновременно:</p>
+        <ul>
+            <li>В личный счет Пользователя (отображается в "Твой вклад");</li>
+            <li>В глобальный счет игры (прогресс заполнения Земли).</li>
+        </ul>
+        <p>3.4. В случае технических задержек (не более 24 часов) Пользователь обязуется ожидать зачисления или обратиться в поддержку.</p>
+
+        <div class="important">
+            <h2>4. Политика возврата (важно!)</h2>
+            <p><strong>4.1. Цифровые товары надлежащего качества не подлежат возврату</strong> в соответствии со ст. 26.1 Закона РФ "О защите прав потребителей" (дистанционная продажа) и Постановлением Правительства РФ № 2463.</p>
+            <p>4.2. После зачисления кликов товар считается оказанным надлежащим образом и возврату не подлежит.</p>
+            <p>4.3. Возврат возможен ТОЛЬКО в следующих случаях:</p>
+            <ul>
+                <li>Техническая ошибка (двойное списание, неверная сумма);</li>
+                <li>Незачисление кликов в течение 24 часов после оплаты;</li>
+                <li>Оплата произошла без согласия Пользователя (мошенничество).</li>
+            </ul>
+            <p>4.4. Для возврата необходимо обратиться в поддержку по email: <strong>kavarnukaevoleg@gmail.com</strong> с указанием:</p>
+            <ul>
+                <li>Номера транзакции;</li>
+                <li>Даты и времени платежа;</li>
+                <li>Суммы платежа;</li>
+                <li>Описания проблемы.</li>
+            </ul>
+            <p>4.5. Срок рассмотрения заявки — до 10 рабочих дней.</p>
+        </div>
+
+        <h2>5. Права и обязанности сторон</h2>
+        <h3>5.1. Администрация обязуется:</h3>
+        <ul>
+            <li>Обеспечивать работоспособность сайта;</li>
+            <li>Зачислять оплаченные клики в установленном порядке;</li>
+            <li>Рассматривать обращения Пользователей.</li>
+        </ul>
+        <h3>5.2. Администрация имеет право:</h3>
+        <ul>
+            <li>Приостанавливать работу сайта для технического обслуживания;</li>
+            <li><strong>Блокировать доступ Пользователю в случае нарушения правил (использование читов, ботов, попытки взлома);</strong></li>
+            <li>Изменять стоимость кликов с предварительным уведомлением на сайте;</li>
+            <li>Отменять покупки и блокировать аккаунты при подозрении в мошенничестве.</li>
+        </ul>
+        <h3>5.3. Пользователь обязуется:</h3>
+        <ul>
+            <li>Не использовать программы для автоматизации кликов (автокликеры, боты);</li>
+            <li>Не пытаться взломать сайт или получить несанкционированный доступ;</li>
+            <li>Не распространять вредоносное ПО через сайт;</li>
+            <li>Не использовать чужие платежные данные.</li>
+        </ul>
+        <h3>5.4. При нарушении п. 5.3 Администрация имеет право:</h3>
+        <ul>
+            <li>Заблокировать доступ к сайту без возврата средств;</li>
+            <li>Аннулировать все накопленные клики;</li>
+            <li>Передать данные в правоохранительные органы.</li>
+        </ul>
+
+        <h2>6. Ответственность</h2>
+        <p>6.1. Администрация не несет ответственности за:</p>
+        <ul>
+            <li>Временные сбои в работе сайта;</li>
+            <li>Действия третьих лиц (хакерские атаки, сбои интернета);</li>
+            <li>Потерю данных по вине Пользователя;</li>
+            <li>Убытки, связанные с использованием или невозможностью использования сайта.</li>
+        </ul>
+        <p>6.2. Максимальная ответственность Администрации ограничена суммой, уплаченной Пользователем за последнюю покупку.</p>
+        <p>6.3. Пользователь несет полную ответственность за сохранность своих данных и платежных средств.</p>
+
+        <h2>7. Конфиденциальность и персональные данные</h2>
+        <p>7.1. Администрация собирает и обрабатывает следующие данные:</p>
+        <ul>
+            <li>Игровой ник (вводится Пользователем);</li>
+            <li>История покупок;</li>
+            <li>Технические данные (IP-адрес, тип браузера).</li>
+        </ul>
+        <p>7.2. Данные используются только для:</p>
+        <ul>
+            <li>Обеспечения работы игры;</li>
+            <li>Зачисления кликов;</li>
+            <li>Формирования рейтинга (Топа);</li>
+            <li>Связи с Пользователем (поддержка).</li>
+        </ul>
+        <p>7.3. Администрация не передает данные третьим лицам, кроме случаев, предусмотренных законодательством РФ.</p>
+        <p>7.4. Подробнее — в <a href="privacy.html">Политике конфиденциальности</a>.</p>
+
+        <h2>8. Заключительные положения</h2>
+        <p>8.1. Настоящее Соглашение регулируется законодательством Российской Федерации.</p>
+        <p>8.2. Все споры решаются путем переговоров. При недостижении согласия — в судебном порядке по месту регистрации Администрации.</p>
+        <p>8.3. Признание судом недействительности какого-либо положения Соглашения не влечет недействительность остальных положений.</p>
+        <p>8.4. Безакцептное списание денежных средств не производится.</p>
+
+        <h2>9. Реквизиты и контакты</h2>
+        <p><strong>Информация о продавце:</strong></p>
+        <ul style="list-style: none; padding-left: 0;">
+            <li><strong>ФИО:</strong> Каварнукаев Олег Вячеславович</li>
+            <li><strong>ИНН:</strong> 471702602370</li>
+            <li><strong>Статус:</strong> Самозанятый</li>
+            <li><strong>Email поддержки:</strong> kavarnukaevoleg@gmail.com</li>
+            <li><strong>Телефон:</strong> +7 (981) 958-68-47</li>
+        </ul>
+        <p>Время ответа поддержки: в рабочие дни в течение 24 часов.</p>
+
+        <div class="footer">
+            <p>Последнее обновление: 24 февраля 2026 года</p>
+            <p><a href="index.html">← Вернуться в игру</a></p>
+        </div>
+    </div>
+</body>
+</html>
