--- a/agreement.html
+++ b/agreement.html
@@ -79,7 +79,7 @@
         <h2>1. Общие положения</h2>
         <p>1.1. Настоящее Пользовательское соглашение (далее — Соглашение) регулирует отношения между владельцем сайта "Заселение Земли" (далее — «Администрация») и любым лицом, использующим сайт (далее — «Пользователь»).</p>
         <p>1.2. Администрация: <strong>Каварнукаев Олег Вячеславович</strong>, ИНН <strong>471702602370</strong> (самозанятый).</p>
-        <p>1.3. Сайт: игра-кликер, доступная по адресу (укажи свой URL), а также все связанные с ним поддомены и сервисы.</p>
+        <p>1.3. Сайт: игра-кликер, доступная по адресу https://colony-tap.ru, а также все связанные с ним поддомены и сервисы.</p>
         <p>1.4. Использование сайта означает безоговорочное принятие Пользователем всех условий Соглашения.</p>
         <p>1.5. Администрация имеет право в любое время изменять условия Соглашения без уведомления Пользователя. Новая редакция вступает в силу с момента ее опубликования.</p>
 
