--- a/privacy.html
+++ b/privacy.html
@@ -1,1 +1,285 @@
 
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Политика конфиденциальности - Заселение Земли</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: linear-gradient(135deg, #0B0B2B, #1B1B4B);
+            color: #ddd;
+            margin: 0;
+            padding: 20px;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+        }
+        .container {
+            max-width: 800px;
+            background: rgba(255,255,255,0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 24px;
+            padding: 30px;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.3);
+        }
+        h1 {
+            color: #ffd700;
+            font-size: 2rem;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+        h2 {
+            color: #ffd700;
+            font-size: 1.3rem;
+            margin: 25px 0 15px;
+        }
+        h3 {
+            color: #ffd700;
+            font-size: 1.1rem;
+            margin: 20px 0 10px;
+        }
+        p, li {
+            line-height: 1.6;
+            margin-bottom: 10px;
+        }
+        ul, ol {
+            padding-left: 20px;
+            margin-bottom: 20px;
+        }
+        li {
+            margin-bottom: 5px;
+        }
+        .important {
+            background: rgba(255,215,0,0.1);
+            border-left: 4px solid #ffd700;
+            padding: 15px;
+            margin: 20px 0;
+            border-radius: 0 10px 10px 0;
+        }
+        .footer {
+            margin-top: 30px;
+            text-align: center;
+            color: #aaa;
+            font-size: 0.9rem;
+        }
+        a {
+            color: #ffd700;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        th, td {
+            border: 1px solid rgba(255,215,0,0.3);
+            padding: 10px;
+            text-align: left;
+        }
+        th {
+            background: rgba(255,215,0,0.2);
+            color: #ffd700;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>🔒 Политика конфиденциальности</h1>
+        <p style="text-align: center; color: #aaa;">Игры "Заселение Земли"</p>
+        
+        <div class="important">
+            <p><strong>Важно:</strong> Мы серьезно относимся к защите ваших персональных данных. Настоящая Политика конфиденциальности составлена в соответствии с требованиями Федерального закона № 152-ФЗ «О персональных данных».</p>
+        </div>
+
+        <h2>1. Общие положения</h2>
+        <p>1.1. Настоящая Политика конфиденциальности (далее — Политика) определяет порядок обработки и защиты персональных данных пользователей сайта "Заселение Земли" (далее — Сайт).</p>
+        <p>1.2. Оператор: <strong>Каварнукаев Олег Вячеславович</strong>, ИНН <strong>471702602370</strong> (самозанятый).</p>
+        <p>1.3. Используя Сайт, Пользователь выражает свое безусловное согласие с условиями настоящей Политики.</p>
+        <p>1.4. В случае несогласия с условиями Политики Пользователь обязан немедленно прекратить использование Сайта.</p>
+
+        <h2>2. Какие данные мы собираем</h2>
+        
+        <h3>2.1. Данные, предоставляемые Пользователем:</h3>
+        <table>
+            <tr>
+                <th>Тип данных</th>
+                <th>Цель сбора</th>
+                <th>Основание обработки</th>
+            </tr>
+            <tr>
+                <td>Игровой ник (имя)</td>
+                <td>Идентификация в игре, отображение в топе игроков</td>
+                <td>Исполнение договора (пользовательского соглашения)</td>
+            </tr>
+            <tr>
+                <td>Email (при оплате)</td>
+                <td>Отправка уведомлений о покупке, восстановление доступа</td>
+                <td>Согласие пользователя</td>
+            </tr>
+            <tr>
+                <td>История покупок</td>
+                <td>Учет зачислений, бухгалтерия, разрешение споров</td>
+                <td>Исполнение договора, законные интересы</td>
+            </tr>
+        </table>
+
+        <h3>2.2. Данные, собираемые автоматически:</h3>
+        <table>
+            <tr>
+                <th>Тип данных</th>
+                <th>Цель сбора</th>
+                <th>Срок хранения</th>
+            </tr>
+            <tr>
+                <td>IP-адрес</td>
+                <td>Защита от мошенничества, техническая диагностика</td>
+                <td>30 дней</td>
+            </tr>
+            <tr>
+                <td>Тип браузера и устройства</td>
+                <td>Оптимизация отображения сайта</td>
+                <td>30 дней</td>
+            </tr>
+            <tr>
+                <td>Cookies</td>
+                <td>Сохранение настроек, аналитика</td>
+                <td>До 1 года</td>
+            </tr>
+            <tr>
+                <td>Данные об ошибках</td>
+                <td>Улучшение работы сайта</td>
+                <td>90 дней</td>
+            </tr>
+        </table>
+
+        <h2>3. Правовые основания обработки</h2>
+        <p>3.1. Обработка персональных данных осуществляется на следующих основаниях:</p>
+        <ul>
+            <li>Статья 24 Конституции РФ;</li>
+            <li>Федеральный закон № 152-ФЗ «О персональных данных»;</li>
+            <li>Пользовательское соглашение (акцепт оферты);</li>
+            <li>Согласие Пользователя на обработку данных.</li>
+        </ul>
+
+        <h2>4. Цели обработки персональных данных</h2>
+        <p>4.1. Мы используем ваши данные только для следующих целей:</p>
+        <ul>
+            <li><strong>Обеспечение работы игры:</strong> зачисление кликов, ведение счета, формирование топа игроков;</li>
+            <li><strong>Обработка платежей:</strong> проведение транзакций через платежные системы (ЮKassa, CryptoCloud);</li>
+            <li><strong>Поддержка пользователей:</strong> ответы на вопросы, решение проблем с оплатой;</li>
+            <li><strong>Улучшение сервиса:</strong> анализ ошибок, оптимизация производительности;</li>
+            <li><strong>Защита от мошенничества:</strong> выявление подозрительной активности.</li>
+        </ul>
+
+        <h2>5. Передача данных третьим лицам</h2>
+        <p>5.1. Мы НЕ передаем персональные данные третьим лицам, ЗА ИСКЛЮЧЕНИЕМ:</p>
+        <ul>
+            <li><strong>Платежные системы</strong> (ЮKassa, CryptoCloud) — для проведения оплаты (передается сумма, номер заказа);</li>
+            <li><strong>Правоохранительные органы</strong> — по запросу в соответствии с законодательством РФ;</li>
+            <li><strong>Сервисы аналитики</strong> — в обезличенном виде (Яндекс.Метрика, Google Analytics).</li>
+        </ul>
+        <p>5.2. Мы требуем от всех третьих лиц соблюдения конфиденциальности и безопасности данных.</p>
+
+        <h2>6. Защита персональных данных</h2>
+        <p>6.1. Мы применяем следующие меры защиты:</p>
+        <ul>
+            <li>Шифрование данных при передаче (HTTPS);</li>
+            <li>Ограниченный доступ к базам данных;</li>
+            <li>Регулярное обновление систем безопасности;</li>
+            <li>Анонимизация данных для аналитики.</li>
+        </ul>
+        <p>6.2. К сожалению, ни один метод передачи данных в интернете не является абсолютно безопасным, но мы делаем все возможное для защиты вашей информации.</p>
+
+        <h2>7. Cookies и технологии отслеживания</h2>
+        <p>7.1. Мы используем cookies для:</p>
+        <ul>
+            <li>Сохранения вашего имени (чтобы не вводить каждый раз);</li>
+            <li>Сбора статистики посещаемости;</li>
+            <li>Предотвращения мошенничества.</li>
+        </ul>
+        <p>7.2. Вы можете отключить cookies в настройках браузера, но это может повлиять на работу некоторых функций.</p>
+        <p>7.3. Используемые файлы cookies:</p>
+        <table>
+            <tr>
+                <th>Название</th>
+                <th>Назначение</th>
+                <th>Срок</th>
+            </tr>
+            <tr>
+                <td>wc_name, wc_id и др.</td>
+                <td>Сохранение игрового ника и ID</td>
+                <td>1 год</td>
+            </tr>
+            <tr>
+                <td>_ga, _ym_uid</td>
+                <td>Аналитика (Яндекс, Google)</td>
+                <td>2 года</td>
+            </tr>
+        </table>
+
+        <h2>8. Права пользователей</h2>
+        <p>8.1. В соответствии с законодательством РФ вы имеете право:</p>
+        <ul>
+            <li><strong>На доступ</strong> — запросить информацию о том, какие данные мы храним;</li>
+            <li><strong>На исправление</strong> — потребовать исправить неточные данные;</li>
+            <li><strong>На удаление</strong> — потребовать удалить ваши данные (кроме случаев, когда мы обязаны их хранить по закону);</li>
+            <li><strong>На отзыв согласия</strong> — в любое время отозвать согласие на обработку;</li>
+            <li><strong>На перенос</strong> — получить ваши данные в машиночитаемом формате.</li>
+        </ul>
+        <p>8.2. Для реализации прав необходимо направить запрос на email: <strong>kavarnukaevoleg@gmail.com</strong> с темой «Запрос персональных данных».</p>
+        <p>8.3. Срок ответа на запрос — до 30 дней.</p>
+
+        <h2>9. Сроки хранения данных</h2>
+        <p>9.1. Мы храним данные в течение следующих сроков:</p>
+        <ul>
+            <li><strong>Игровой ник и счет:</strong> до момента удаления аккаунта или отзыва согласия;</li>
+            <li><strong>История покупок:</strong> 5 лет (требование налогового законодательства);</li>
+            <li><strong>Технические логи:</strong> 30 дней;</li>
+            <li><strong>Cookies:</strong> согласно таблице выше.</li>
+        </ul>
+
+        <h2>10. Трансграничная передача данных</h2>
+        <p>10.1. Мы не осуществляем трансграничную передачу персональных данных. Все данные хранятся на серверах, расположенных на территории Российской Федерации.</p>
+
+        <h2>11. Дети</h2>
+        <p>11.1. Наш Сайт не предназначен для лиц младше 14 лет. Мы не собираем намеренно данные детей. Если вы обнаружили, что ребенок предоставил нам данные, сообщите нам для их удаления.</p>
+
+        <h2>12. Изменения в Политике</h2>
+        <p>12.1. Мы можем обновлять Политику конфиденциальности время от времени. Новая версия вступает в силу с момента ее опубликования.</p>
+        <p>12.2. Продолжая использовать Сайт после изменений, вы соглашаетесь с новой редакцией.</p>
+        <p>12.3. Дата последнего обновления указана внизу страницы.</p>
+
+        <h2>13. Контактная информация</h2>
+        <p>По всем вопросам, связанным с обработкой персональных данных, обращайтесь:</p>
+        <ul style="list-style: none; padding-left: 0;">
+            <li><strong>Email:</strong> kavarnukaevoleg@gmail.com</li>
+            <li><strong>Телефон:</strong> +7 (981) 958-68-47</li>
+            <li><strong>ФИО:</strong> Каварнукаев Олег Вячеславович</li>
+            <li><strong>ИНН:</strong> 471702602370</li>
+        </ul>
+        <p>Время ответа на запросы: в рабочие дни в течение 24 часов.</p>
+
+        <h2>14. Согласие на обработку персональных данных</h2>
+        <p>14.1. Используя Сайт, вы подтверждаете, что:</p>
+        <ul>
+            <li>Ознакомлены с условиями настоящей Политики;</li>
+            <li>Понимаете свои права и обязанности;</li>
+            <li>Даете согласие на обработку ваших персональных данных на указанных условиях.</li>
+        </ul>
+
+        <div class="important">
+            <p><strong>Для пользователей из ЕС:</strong> Мы не ориентированы на европейский рынок и не подпадаем под действие GDPR. Если вы находитесь в ЕС, использование сайта осуществляется на ваш риск.</p>
+        </div>
+
+        <div class="footer">
+            <p>Последнее обновление: 24 февраля 2026 года</p>
+            <p><a href="agreement.html">Пользовательское соглашение</a> | <a href="index.html">← Вернуться в игру</a></p>
+        </div>
+    </div>
+</body>
+</html>
