--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         .earth-image {
             position: absolute;
             inset: 0;
-            background: url('https://yt3.googleusercontent.com/jxNzA1STZW8BLqnCWh0-0_N2HIp9YW3gBzH7enj7wk5bGjp9U3wbvCkvAOPT8ZUBFFtHlnui2Q=s900-c-k-c0x00ffffff-no-rj') center/cover;
+            background: url('https://github.com/HooLi2022/The-Colony-Tap/blob/main/в.png') center/cover;
             background-size: cover;
             z-index: 2;
             clip-path: inset(100% 0 0 0);
@@ -1898,3 +1898,4 @@
     </script>
 </body>
 </html>
+
