--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta name="regru-verification" content="5f00441099dc9872d3c40f53cdedf16087eec0e9da7ce94334a94e65d34c4465" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌍 Заселение Земли</title>
@@ -3447,3 +3448,4 @@
     </script>
 </body>
 </html>
+
