--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta name="regru-verification" content="3cf97675ea0862075485719431a615b900ff0b69041121bd08900c8ef254b7c1" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🌍 Заселение Земли</title>
@@ -3534,3 +3535,4 @@
     </script>
 </body>
 </html>
+
