--- a/index.html
+++ b/index.html
@@ -1994,9 +1994,9 @@
                 KEY: 'Lm9rMjAyNQ==',
                 RESET_FLAG: 'reset_trigger',
                 RESET_TIME: 'reset_time',
-                IMAGE_URL: 'https://i.imgur.com/W6H3wKX.jpg',
+                IMAGE_URL: 'https://sun9-82.userapi.com/impf/j48A1EfLNRkgMVnUUo5x8zKb9L_cixltOPzoNg/Nd0gTPkT_JQ.jpg?size=604x326&quality=96&sign=c904a974341f4bf2554d522efa0e3602&type=album',
                 CRYPTO_SHOP_ID: 'At3cptqTbYR9y1Hs',
-                AD_LINK: '?rlink=reflink-31329889',
+                AD_LINK: 'https://www.reg.ru/?rlink=reflink-31329889',
                 AD_BONUS: 100,
                 
                 ACHIEVEMENTS: {
@@ -3731,3 +3731,4 @@
     </script>
 </body>
 </html>
+
