--- a/index.html
+++ b/index.html
@@ -2863,8 +2863,8 @@
                 YOOKASSA: {
                     // В режиме тестирования используйте эти настройки
                     // Для реальных платежей замените на свои данные
-                    SHOP_ID: 'ваш_идентификатор_магазина', // Из личного кабинета ЮKassa
-                    SECRET_KEY: 'ваш_секретный_ключ', // Из личного кабинета ЮKassa
+                    SHOP_ID: '1282823', // Из личного кабинета ЮKassa
+                    SECRET_KEY: 'live_OcYxk1ypAMSFD0lM-0QWrvLvwa7YnDG7mJSl03v4TPE', // Из личного кабинета ЮKassa
                     RETURN_URL: window.location.origin + '/payment-success.html', // URL возврата после оплаты
                     IS_TEST: true // true для тестового режима, false для реальных платежей
                 },
@@ -5684,3 +5684,4 @@
     </script>
 </body>
 </html>
+
