--- a/payment-success.html
+++ b/payment-success.html
@@ -41,9 +41,9 @@
 <body>
     <div class="success">
         <h1>✅ Оплата принята!</h1>
-        <p>Клики будут зачислены после возврата в игру</p>
+        <p>Клики будут зачислены автоматически</p>
         <div class="loader"></div>
-        <p>Вернитесь в игру и подтвердите оплату</p>
+        <p>Возврат в игру через 2 секунды...</p>
     </div>
 </body>
 </html>
